<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReporteApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_hora_">*Hora :</string>
    <string name="reportar">Reportar</string>
    <string name="por_favor_reporte_o_problema_preenchendo_os_campos_abaixo_">Por favor reporte o problema, preenchendo os campos abaixo.</string>
    <string name="_nome_do_funcion_rio_">*Nome do funcionário :</string>
    <string name="piso_">Piso :</string>
    <string name="_data_do_problema_">*Data do problema :</string>
    <string name="_descri_o_do_problema_">*Descrição do problema :</string>
    <string name="_apelido_do_funcion_rio_">*Apelido do funcionário :</string>
    <string name="_departamento_reparti_o_">*Departamento/Repartição :</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="menu_principal_do_reporteapp">Menu principal do ReporteApp</string>
    <string name="reportar_problema">Reportar problema</string>
    <string name="data_">Data :</string>
    <string name="_data_">*Data :</string>
    <string name="voltar_ao_menu">Voltar ao menu</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="reportapp_dpefz">ReportApp DPEFZ</string>
    <string name="bem_vindo_">Bem vindo!</string>
    <string name="dire_o_prov_ncial_de_economia_e_finan_as_da_zamb_zia">Direção Províncial de Economia e Finanças da Zambézia</string>
    <string name="todo">TODO</string>
    <string name="e_finan_as_da_zamb_zia">e Finanças da Zambézia</string>
    <string name="dire_o_provincias_de_economia">Direção Provincias de Economia</string>
    <string name="o_reportapp_uma_aplica_o_que_foi_desenvolvida_para_fins_acad_micos_da_cadeira_de_programa_o_mov_l_projectada_para_a_dire_o_provincial_de_economia_e_finan_as_da_zamb_zia_esta_aplica_o_tem_como_principal_objectivo_permitir_uma_melhor_gest_o_dos_problemas_que_a_institui_o_depara_se_no_seu_dia_a_dia_e_que_o_t_cnico_de_inform_tica_procura_solucionar_diariamente_">O ReportApp, é uma aplicação que foi desenvolvida para fins académicos da cadeira de programação movél, projectada para a Direção Provincial de Economia e Finanças da Zambézia. Esta aplicação tem como principal objectivo permitir uma melhor gestão dos problemas que a instituição depara-se no seu dia-a-dia, e que o técnico de informática procura solucionar diariamente.</string>
    <string name="contactos_">"Contactos : "</string>
    <string name="sobre_o_reportapp_">Sobre o ReportApp :</string>
    <string name="nome_da_institui_o_dire_o_provincial_de_economia_e_finan_as">Nome da Instituição : Direção Provincial de Economia e Finanças</string>
    <string name="o_reportapp_uma_aplica_o_que_foi_desenvolvida_para_fins_acad_micos_da_cadeira_de_programa_o_m_vel_projectada_para_a_dire_o_provincial_de_economia_e_finan_as_da_zamb_ziaesta_aplica_o_tem_como_principal_permitir_uma_melhor_gest_o_dos_problemas_que_a_institui_o_depara_se_no_seu_dia_a_dia_e_que_o_t_cnico_de_inform_tico_procura_solucionar_diariamente_">O ReportApp, é uma aplicação que foi desenvolvida para fins académicos da cadeira de programação móvel, projectada para a Direção Provincial de Economia e Finanças da Zambéziaesta aplicação tem como principal permitir uma melhor gestão dos problemas que a instituição depara-se no seu dia a dia e que o técnico de informático procura solucionar diariamente.</string>
    <string name="_">---------------------------------------------------</string>
    <string name="endere_o_av_marginal_n_1000_cidade_de_quelimane">Endereço : Av. Marginal, nº 1000, Cidade de Quelimane</string>
    <string name="sobre_o_reportapp_1_0_by_yrton_pereir_">Sobre o ReportApp 1.0, By @yrton Pereir@</string>
    <string name="hh_mm">HH:mm</string>
    <string name="telefs_24250010_24213106_24212820">Telefs : 24250010 / 24213106 / 24212820</string>
    <string name="o_reportapp_uma_aplica_o_que_foi_desenvolvida_para_fins_acad_micos_para_a_cadeira_de_programa_o_m_vel_e_projectada_para_a_dire_o_provincial_de_economia_e_finan_as_da_zamb_zia_dpefz_o_aplicativo_tem_como_principal_objectivo_permitir_uma_melhor_gest_o_dos_problemas_que_os_funcion_rios_se_deparam_com_os_diversos_recursos_tecnol_gicos_no_dia_a_dia_e_tamb_m_a_gest_o_dos_problemas_que_o_t_cnico_depara_se_diariamente_">O ReportApp, é uma aplicação que foi desenvolvida para fins académicos para a cadeira de programação móvel e projectada para a direção provincial de economia e finanças da zambézia - DPEFZ. O aplicativo tem como principal objectivo permitir uma melhor gestão dos problemas que os funcionários se deparam com os diversos recursos tecnológicos no dia-a-dia e também a gestão dos problemas que o técnico depara-se diariamente.</string>
    <string name="dd_mm_aaaa">dd-MM-aaaa</string>
    <string name="dire_o_provincial_de_economia">Direção Provincial de Economia</string>
    <string name="e_mail_dpefinancasz_gmail_com">E-mail : dpefinancasz@gmail.com</string>
    <string name="seu_nome">Seu nome</string>
    <string name="sobre_o_reportapp_1_0_by_yrton">Sobre o ReportApp 1.0. by @yrton</string>
    <string name="fax_24214036_cp_49">Fax : 24214036 CP 49</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="title_activity_menu_principal_admin">Admin</string>
    <string name="title_activity_funcionario_form">FuncionarioForm</string>
    <string name="title_activity_usuario_form">UsuarioForm</string>
    <string name="title_activity_reg_funcionario">Registo de funcionário</string>
    <string name="por_favor_preencha_os_campos_abaixo_para_puder_registar_um_funcion_rio">Por favor preencha os campos abaixo para puder registar um funcionário</string>
    <string name="c_digo_">Código :</string>
    <string name="nome_">Nome  :</string>
    <string name="apelido_">Apelido :</string>
    <string name="carreira_">Carreira :</string>
    <string name="nome_do_funcion_rio">Nome do funcionário</string>
    <string name="c_digo_do_funcion_rio">Código do funcionário</string>
    <string name="reparti_o">Repartição</string>
    <string name="apelido_do_funcion_rio">Apelido do funcionário</string>
    <string name="cargo_">Cargo :</string>
    <string name="por_favor_preencha_os_campos_abaixo_para_puder_registar_uma_conta_de_acesso_ao_aplicativo">Por favor preencha os campos abaixo para puder registar uma conta de acesso ao aplicativo</string>
    <string name="c_digo_do_funcion_rio_">Código do funcionário :</string>
    <string name="nome_de_usu_rio_">Nome de usuário :</string>
    <string name="depart_reparti_">Depart./Reparti.</string>
    <string name="registar_funcion_rio">Registar funcionário</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_funcionarios">Funcionarios</string>
    <string name="c_digo">Código</string>
    <string name="contacto_">Contacto :</string>
    <string name="title_activity_index_admin">IndexAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="registo_de_conta_de_acesso">Registo de conta de acesso</string>
    <string name="consultar_problemas">Consultar problemas</string>
    <string name="title_activity_cont_acesso">ContAcesso</string>
    <string name="consultar_contas_de_acesso">Consultar contas de acesso</string>
    <string name="consultar_funcion_rios">Consultar funcionários</string>

</resources>
