<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="5dp"
    android:paddingBottom="0dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ScrollView>

    <TextView
        android:id="@+id/lblSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignTop="@+id/scrollView1"
        android:text="@string/sobre_o_reportapp_1_0_by_yrton"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblSobreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_below="@+id/lblSobre"
        android:text="@string/o_reportapp_uma_aplica_o_que_foi_desenvolvida_para_fins_acad_micos_para_a_cadeira_de_programa_o_m_vel_e_projectada_para_a_dire_o_provincial_de_economia_e_finan_as_da_zamb_zia_dpefz_o_aplicativo_tem_como_principal_objectivo_permitir_uma_melhor_gest_o_dos_problemas_que_os_funcion_rios_se_deparam_com_os_diversos_recursos_tecnol_gicos_no_dia_a_dia_e_tamb_m_a_gest_o_dos_problemas_que_o_t_cnico_depara_se_diariamente_"
        android:textColor="#000000"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/btnVoltar4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:contentDescription="@string/todo"
        android:src="@drawable/home" />

    <TextView
        android:id="@+id/lblNomeInstituicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblEmail"
        android:text="@string/nome_da_institui_o_dire_o_provincial_de_economia_e_finan_as"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblFax"
        android:text="@string/e_mail_dpefinancasz_gmail_com"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblFax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblTelefone"
        android:text="@string/fax_24214036_cp_49"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblEndereco"
        android:text="@string/telefs_24250010_24213106_24212820"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblContacto2"
        android:text="@string/endere_o_av_marginal_n_1000_cidade_de_quelimane"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblContacto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblSobreText"
        android:text="@string/contacto_"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>