<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AutenForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/lblDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/menu_principal_do_reporteapp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReport"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblDesc"
        android:layout_marginTop="21dp"
        android:text="@string/reportar_problema"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnSair"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/logout" />

</RelativeLayout>
