<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipalAdmin" >

    <ImageButton
        android:id="@+id/btnVoltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:src="@drawable/logout" android:contentDescription="@string/todo"/>

    <Button
        android:id="@+id/btnRegFun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/btnVoltar2"
        android:layout_below="@+id/txtDesc"
        android:layout_marginTop="20dp"
        android:background="#222222"
        android:padding="10dp"
        android:text="@string/registar_funcion_rio"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:shadowColor="#d87f7f"
        android:text="@string/menu_principal"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnConsultarUserAcesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultarFuncionarios"
        android:layout_below="@+id/btnConsultarFuncionarios"
        android:layout_marginTop="14dp"
        android:background="#222"
        android:padding="10dp"
        android:text="@string/consultar_contas_de_acesso"
        android:textColor="#fff"
        android:textColorLink="#fff"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnConsultarFuncionarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultarReports"
        android:layout_below="@+id/btnConsultarReports"
        android:layout_marginTop="14dp"
        android:background="#222"
        android:padding="10dp"
        android:text="@string/consultar_funcion_rios"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnConsultarReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#222"
        android:padding="10dp"
        android:text="@string/consultar_problemas"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_marginTop="14dp"
        android:textStyle="normal"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnRegUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConsultarReports"
        android:layout_alignLeft="@+id/btnRegFun"
        android:layout_marginBottom="14dp"
        android:background="#222222"
        android:padding="10dp"
        android:text="Registar conta de acesso"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

</RelativeLayout>
