<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dpefz.reporteapp.RegFuncionario" >

    <EditText
        android:id="@+id/txtCodigoReg"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblCodigo"
        android:layout_alignRight="@+id/txtDesc2"
        android:layout_toRightOf="@+id/lblCodigo"
        android:ems="10"
        android:hint="@string/c_digo_do_funcion_rio"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtReparticaoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblReparticaoReg"
        android:layout_alignRight="@+id/txtApelidoReg"
        android:layout_toRightOf="@+id/lblReparticaoReg"
        android:ems="10"
        android:hint="@string/reparti_o"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtCargoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblCargoReg"
        android:layout_alignRight="@+id/txtReparticaoReg"
        android:layout_toRightOf="@+id/lblCargoReg"
        android:ems="10"
        android:hint="Cargo do funcionário"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtCarreira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblCarreiraReg"
        android:layout_alignRight="@+id/txtCargoReg"
        android:layout_toRightOf="@+id/lblCarreiraReg"
        android:ems="10"
        android:hint="Carreira do funcionário"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnRegistaFun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCarreiraReg"
        android:layout_alignParentBottom="true"
        android:background="#222222"
        android:text="Registar"
        android:textColor="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txtDepartamentoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblDepartamentoReg"
        android:layout_alignRight="@+id/txtReparticaoReg"
        android:layout_toRightOf="@+id/lblDepartamentoReg"
        android:ems="10"
        android:hint="Departamento "
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/txtDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/por_favor_preencha_os_campos_abaixo_para_puder_registar_um_funcion_rio"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtDesc2"
        android:layout_marginTop="24dp"
        android:text="@string/c_digo_"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblNomeReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblCodigo"
        android:layout_marginTop="20dp"
        android:text="@string/nome_"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblApelidoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblNomeReg"
        android:layout_marginTop="20dp"
        android:text="@string/apelido_"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblDepartamentoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtApelidoReg"
        android:layout_marginTop="20dp"
        android:text="Departamento :"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblReparticaoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="Repartição :"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblCargoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblReparticaoReg"
        android:layout_marginTop="20dp"
        android:text="@string/cargo_"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblCarreiraReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtCargoReg"
        android:layout_marginTop="20dp"
        android:text="@string/carreira_"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtNomeReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblApelidoReg"
        android:layout_alignRight="@+id/txtCodigoReg"
        android:layout_toRightOf="@+id/lblCargoReg"
        android:ems="10"
        android:hint="@string/nome_do_funcion_rio"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtApelidoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblApelidoReg"
        android:layout_alignRight="@+id/txtNomeReg"
        android:layout_toRightOf="@+id/lblCodigo"
        android:ems="10"
        android:hint="@string/apelido_do_funcion_rio"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#a0a0a0"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <TextView
        android:id="@+id/lblDataRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblCarreiraReg"
        android:layout_marginTop="20dp"
        android:text="Data de registo :"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <EditText
        android:id="@+id/txtDataRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblDataRegisto"
        android:layout_toRightOf="@+id/lblDataRegisto"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="text"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" >

        <requestFocus />
    </EditText>

</RelativeLayout>